# file_metadata_etl

./: .env_sample  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  fake_video_file_generator.py  pyproject.toml
scripts/: challenge_part_one.sh  entrypoint.sh
src/etl/: __main__.py  config.py  dtos.py  orquestrator.py
src/etl/services/: __init__.py  dates_processor.py  extractor.py  loader.py  processor.py
